display mermaid diagram in show view

--- a/app/views/diagrams/show.html.erb
+++ b/app/views/diagrams/show.html.erb
@@ -12,6 +12,7 @@
 
 <p>
   <strong>Source code:</strong>
+  <pre class='mermaid'><%= @diagram.source_code %></pre>
   <%= @diagram.source_code %>
 </p>
 
