--- a/app/views/diagrams/show.html.erb
+++ b/app/views/diagrams/show.html.erb
@@ -13,7 +13,7 @@
 <p>
   <strong>Source code:</strong>
   <pre class='mermaid'><%= @diagram.source_code %></pre>
-  <%= @diagram.source_code %>
+  <%= @diagram.format_source_code_to_html.html_safe  %>
 </p>
 
 <%= link_to 'Edit', edit_diagram_path(@diagram) %> |
