--- a/app/views/diagrams/index.html.erb
+++ b/app/views/diagrams/index.html.erb
@@ -1,32 +1,22 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Diagrams</h1>
 
-<table>
- <thead>
-   <tr>
-     <th>Name</th>
-     <th>Type</th>
-     <th>Description</th>
-     <th>Source code</th>
-     <th colspan="3"></th>
-   </tr>
- </thead>
+<%= link_to 'New Diagram', new_diagram_path, :class =>"btn btn-primary btn-lg" %>
 
- <tbody>
-   <% @diagrams.each do |diagram| %>
-     <tr>
-       <td><%= diagram.name %></td>
-       <td><%= diagram.description %></td>
-       <td><pre class='mermaid'><%= diagram.source_code %></pre></td>
-       <td><%= link_to 'Show', diagram %></td>
-       <td><%= link_to 'Edit', edit_diagram_path(diagram) %></td>
-       <td><%= link_to 'Destroy', diagram, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-     </tr>
-   <% end %>
- </tbody>
-</table>
+<div class="card-columns">
+  <% @diagrams.shuffle.each do |diagram| %>
+  <div class="card m-0">
+    <div class="card-body">
+      <h5 class="card-title"><%= diagram.name %></h5>
+      <p class="card-text"><pre class='mermaid'><%= diagram.source_code %></pre></p>
+      <p class="card-text"><%= link_to 'Show', diagram, :class => "btn btn-outline-primary" %>
+      <%= link_to 'Edit', edit_diagram_path(diagram), :class => "btn btn-outline-secondary" %>
+      <%= link_to 'Destroy', diagram, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-outline-danger" %></p>
 
-<br>
+      <p class="card-text"><small class="text-muted">Last updated <%= time_ago_in_words(diagram.created_at) %> ago</small></p>
+    </div>
+  </div>
+  <% end %>
+</div>
 
-<%= link_to 'New Diagram', new_diagram_path %>
+
