--- a/app/views/diagrams/index.html.erb
+++ b/app/views/diagrams/index.html.erb
@@ -5,13 +5,13 @@
 
 <div class="card-columns">
   <% @diagrams.shuffle.each do |diagram| %>
-  <div class="card m-0">
+  <div class="card">
     <div class="card-body">
       <h5 class="card-title"><%= diagram.name %></h5>
       <p class="card-text"><pre class='mermaid'><%= diagram.source_code %></pre></p>
-      <p class="card-text"><%= link_to 'Show', diagram, :class => "btn btn-outline-primary" %>
-      <%= link_to 'Edit', edit_diagram_path(diagram), :class => "btn btn-outline-secondary" %>
-      <%= link_to 'Destroy', diagram, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-outline-danger" %></p>
+      <p class="card-text"><%= link_to 'Show', diagram, :class => "btn btn-sm btn-outline-primary" %>
+      <%= link_to 'Edit', edit_diagram_path(diagram), :class => "btn btn-sm btn-outline-secondary" %>
+      <%= link_to 'Destroy', diagram, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-sm btn-outline-danger" %></p>
 
       <p class="card-text"><small class="text-muted">Last updated <%= time_ago_in_words(diagram.created_at) %> ago</small></p>
     </div>
