--- a/app/views/diagrams/_form.html.erb
+++ b/app/views/diagrams/_form.html.erb
@@ -45,16 +45,22 @@
 require.config({ paths: { 'vs': 'https://cdn.jsdelivr.net/npm/monaco-editor@0.34.1/min/vs' } });
 require(['vs/editor/editor.main'], function() {
   document.getElementById('source_code').value;
+
+    // validation settings
+    monaco.languages.typescript.javascriptDefaults.setDiagnosticsOptions({
+        noSemanticValidation: true,
+        noSyntaxValidation: true
+    })
     var editor = monaco.editor.create(document.getElementById('editor'), {
         value: document.getElementById('source_code').value,
         automaticLayout: true,
         language: 'javascript',
         theme: 'vs-dark'
     });
-  const form = document.getElementById("new_diagram_form");
-          form.addEventListener("formdata", e => {
-            e.formData.set("diagram[source_code]", editor.getValue());
-          });
+    const form = document.getElementById("new_diagram_form");
+        form.addEventListener("formdata", e => {
+        e.formData.set("diagram[source_code]", editor.getValue());
+    });
 });
 
 </script>
