add logo favico

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
     <%= stylesheet_link_tag 'application', media: 'all'%>
     <%= javascript_pack_tag 'application' %>
-
+    <%= favicon_link_tag asset_path('apple-icon-57x57.png') %>
   </head>
 
   <body>
