--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,6 @@
     <%= favicon_link_tag asset_path('apple-icon-57x57.png') %>
     <!-- Google tag (gtag.js) -->
     
-    
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-B6DYKG3NLV"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -26,86 +25,13 @@
 
   <body>
   
-  <!-- Navigation Bar -->
-  <div class="p-3 text-center bg-white border-bottom fixed-top">
-    <div class="container-fluid">
-      <div class="row">
-        <!-- Left elements -->
-        <div
-          class="col-md-5 d-flex justify-content-center justify-content-md-start align-items-center d-none d-lg-flex">
-          <a class="text-reset me-3" href="#">
-            <i class="fas fa-th-large"></i>
-          </a>
-          <a class="text-reset me-3" href="/">
-          <span class="d-none d-xl-inline-block">Home
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 576 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/></svg>
-
-              </span>
-          </a>
-          
-          <a class="text-reset me-3" href="<% diagrams_path %>" >
-            <i class="fas fa-columns me-1"></i>
-            <span class="d-none d-xl-inline-block">Diagrams
-     	        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 384 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M192 0c-41.8 0-77.4 26.7-90.5 64H64C28.7 64 0 92.7 0 128V448c0 35.3 28.7 64 64 64H320c35.3 0 64-28.7 64-64V128c0-35.3-28.7-64-64-64H282.5C269.4 26.7 233.8 0 192 0zm0 64a32 32 0 1 1 0 64 32 32 0 1 1 0-64zM72 272a24 24 0 1 1 48 0 24 24 0 1 1 -48 0zm104-16H304c8.8 0 16 7.2 16 16s-7.2 16-16 16H176c-8.8 0-16-7.2-16-16s7.2-16 16-16zM72 368a24 24 0 1 1 48 0 24 24 0 1 1 -48 0zm88 0c0-8.8 7.2-16 16-16H304c8.8 0 16 7.2 16 16s-7.2 16-16 16H176c-8.8 0-16-7.2-16-16z"/></svg>
-            </span>
-          </a>
-     
-
-          <form class="d-flex input-group w-auto my-auto mb-3 mb-md-0">
-            <input autocomplete="off" type="search" class="form-control rounded" placeholder="Search" />
-            <span class="input-group-text border-0 d-none d-lg-flex">
-              <svg xmlns="http://www.w3.org/2000/svg" class='icon' viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>
-	          </span>
-          </form>
-        </div>
-        <!-- Left elements -->
-
-        <!-- Center elements -->
-        <div class="col-md-2 d-none d-lg-block">
-          <span class="logo">
-            DiagramHub
-          </span>
-        </div>
-        <!-- Center elements -->
-
-        <!-- Right elements -->
-        <% unless user_signed_in? %>
-        <div class="col-lg-5 d-flex justify-content-center justify-content-md-end align-items-center">
-          <button type="button" class="btn btn-light px-3 me-2">
-          <%= link_to 'Login', new_user_session_path, :class =>"btn btn-secondary" %>
-          </button>
-
-          <button type="button" class="btn btn-light px-3 me-2">
-          <%= link_to 'Sign up', new_user_registration_path,  
-          :class => "btn btn-secondary" %>
-          </button>
-          
-          <%= link_to 'New Diagram', new_diagram_path, :class =>"btn btn-primary btn-md text-white shadow" %>
-        </div>
-        <%else%>
-
-        <div class="col-lg-5 d-flex justify-content-center justify-content-md-end align-items-center">
-          <button type="button" class="btn btn-light px-3 me-2">
-          <%= link_to 'Logout', destroy_user_session_path, method: :delete, :class =>"btn btn-secondary" %>
-          </button>
-          </div>
-
-       <% end %>
-
-        <!-- Right elements -->
-      </div>
-    </div>
-  </div>
-  <!--end Navigation Bar -->
-
-
-
-
   <!--Main layout-->
   <div class="container">
-    <%= yield %>
+  <%= render 'layouts/navbar' %>
   </div>
 
+    <%= yield %>
+ 
 
     <script type="module">
       import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@9/dist/mermaid.esm.min.mjs';
