--- a/app/views/diagrams/index.html.erb
+++ b/app/views/diagrams/index.html.erb
@@ -1,19 +1,23 @@
 <p id="notice"><%= notice %></p>
 
 <div class="card-columns">
-  <% @diagrams.shuffle.each do |diagram| %>
+
+<% @diagrams.each do |diagram| %>
   <div class="card">
     <div class="card-body">
-      <h5 class="card-title"><%= diagram.name %></h5>
+      <h5 class="card-title"><%= diagram.name %></h5> 
+      <h5 class="card-title"><%= diagram.user.email if diagram.user %></h5>
       <p class="card-text"><pre class='mermaid'><%= diagram.source_code %></pre></p>
       <p class="card-text"><%= link_to 'Show', diagram, :class => "btn btn-sm btn-outline-primary" %>
 
-      <% if user_signed_in? %>
+      <% if diagram.user == current_user  %>
         <%= link_to 'Edit', edit_diagram_path(diagram), :class => "btn btn-sm btn-outline-secondary" %>
         <%= link_to 'Destroy', diagram, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-sm btn-outline-danger" %></p>
       <% end %>
       <p class="card-text"><small class="text-muted">Last updated <%= time_ago_in_words(diagram.created_at) %> ago</small></p>
-    </div>
+      <p class="card-text"><small class="text-muted">created by <%= diagram.user.email if diagram.user %></small></p>
+
+      </div>
   </div>
   <% end %>
 </div>
