--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,12 +26,16 @@
   <body>
   
   <!--Main layout-->
+  
   <div class="container">
   <%= render 'layouts/navbar' %>
   </div>
 
     <%= yield %>
- 
+    
+    <% flash.each do |msg| %>
+      <%= msg %>
+    <% end %>
 
     <script type="module">
       import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@9/dist/mermaid.esm.min.mjs';
