Devise authentication implementation (#20)
* initial septup configured + nvm + yarn

* initial setup configured

* added logic in view sign_up/in  vs logout + assocaition diagrams vs users

* rectored navbar

* added rules of index  display -> show(all), delete,edit(current_user)

* added admin function + power(controller & view)

* fixed controller require permission-> delete/edit*

* fixed flash and view*

* last commit on this branch

* correct pull request comments

---------

Co-authored-by: amar <aminebennacer@gmail.com>

--- a/app/views/diagrams/index.html.erb
+++ b/app/views/diagrams/index.html.erb
@@ -1,21 +1,29 @@
-<p id="notice"><%= notice %></p>
-
-
 
 <div class="card-columns">
-  <% @diagrams.shuffle.each do |diagram| %>
-  <div class="card">
-    <div class="card-body">
-      <h5 class="card-title"><%= diagram.name %></h5>
-      <p class="card-text"><pre class='mermaid'><%= diagram.source_code %></pre></p>
-      <p class="card-text"><%= link_to 'Show', diagram, :class => "btn btn-sm btn-outline-primary" %>
-      <%= link_to 'Edit', edit_diagram_path(diagram), :class => "btn btn-sm btn-outline-secondary" %>
-      <%= link_to 'Destroy', diagram, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-sm btn-outline-danger" %></p>
+  <br><p id="notice"><%= notice %></p>
 
-      <p class="card-text"><small class="text-muted">Last updated <%= time_ago_in_words(diagram.created_at) %> ago</small></p>
-    </div>
-  </div>
+  <br>
+
+  <% if current_user.present? %>
+    Your current role is: <%= current_user.role %> <%= current_user.email %>
   <% end %>
+
+    <% @diagrams.shuffle.each do |diagram| %>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><%= diagram.name %></h5> 
+          <h8 class="card-title"> by <%= diagram.user.email if diagram.user %> ( <%= diagram.user.role %> ) </h8>
+            <p class="card-text"><pre class='mermaid'><%= diagram.source_code %></pre></p>
+            <p class="card-text"><%= link_to 'Show', diagram, :class => "btn btn-sm btn-outline-primary" %>
+              <% if diagram.user == current_user || current_user&.admin? %>
+                <%= link_to 'Edit', edit_diagram_path(diagram), :class => "btn btn-sm btn-outline-secondary" %>
+                <%= link_to 'Destroy', diagram, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-sm btn-outline-danger" %></p>    
+              <% end %>
+            <p class="card-text"><small class="text-muted">Last updated <%= time_ago_in_words(diagram.created_at) %> ago</small></p>
+            <p class="card-text"><small class="text-muted">created by <%= diagram.user.email if diagram.user %></small></p>
+        </div>
+      </div>
+    <% end %>    
 </div>
 
 
